k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devops-app-policy
spec:
  podSelector:
    matchLabels:
      app: devops-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 5000
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
